Bug 163597 - Jumping text in Impress outline edit
Summary: Jumping text in Impress outline edit
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
3.6 all versions
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:24.8.3
Keywords:
Depends on:
Blocks:
 
Reported: 2024-10-23 21:39 UTC by Thorsten Behrens (allotropia)
Modified: 2024-10-23 21:42 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Jumping text (18.69 KB, application/vnd.oasis.opendocument.presentation)
2024-10-23 21:39 UTC, Thorsten Behrens (allotropia)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Thorsten Behrens (allotropia) 2024-10-23 21:39:40 UTC
Created attachment 197212 [details]
Jumping text

Impress outliner text sometimes jumps, when switching between edit and non-edit mode.

To reproduce:
* load attached document
* click on bullet list to enter edit mode
* see the lines jump slightly
* press ESC to exit edit mode, see lines jump back
Comment 1 Thorsten Behrens (allotropia) 2024-10-23 21:40:52 UTC
Fixed in master with https://gerrit.libreoffice.org/c/core/+/175127
Comment 2 Commit Notification 2024-10-23 21:42:42 UTC
Armin Le Grand (allotropia) committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/eb627159e30ce027cbb8c47a69241f4c0421d993

tdf#163597: Support FixedCellHeight in SdrAutoFitTextPrimitive2D

It will be available in 24.8.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.