tdf#163597: Support FixedCellHeight in SdrAutoFitTextPrimitive2D

That was missing with the result that for some cases the
painted text (where it was missing) differed from the
text in EditEngine mode (was set there).

Change-Id: I23ddf8e90be2335c56e5a485308c753dfe72a878
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/175127
Tested-by: Jenkins
Reviewed-by: Armin Le Grand <Armin.Le.Grand@me.com>
(cherry picked from commit 25d6bd3ebcf4a5d6003288863620565749433787)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/175382
Reviewed-by: Thorsten Behrens <thorsten.behrens@allotropia.de>